src/www/styles.css
body {
    background-color: black;
    color: white;
    font-family: 'sans-serif', "serif", "Lucida Sans Regular", 'Times New Roman', "Times", "DejaVu Serif", "Verdana";
    margin: 0;
    overflow: hidden;
}

.body-container {
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    height: calc(100vh - 100px);
}

.hidden {
  display: none !important;
}

.disabled {
    background-color: lightgray;
    pointer-events: none;
    cursor: not-allowed;
}

.header {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    margin-top: 16px;
    margin-bottom: 16px;
}

.headerSection {
    flex-basis: 33%;
}

.headerLogoSection {
    display: flex;
    justify-content: center;
    flex-basis: 33%;
    flex-flow: column;
    align-items: center;
}

.headerLogo {
    height: 50px;
    max-width: fit-content;
}
.auth-container {
    margin: 0 auto;
    display: flex;
    flex-flow: column;
    width: 20%;
}
.auth-body {
    display: flex;
    height: 100vh;
    align-items: center;
}
.auth-body-content {
    flex-basis: 100%;
}
.auth-footer {
    justify-content: center !important;
    margin-top: 16px;
}
.auth-footer button {
    height: 40px!important;
    width: 75px;
    font-size: larger;
}
.toolBar {
    display: flex;
    flex-flow: column;
    margin: 16px 8px 16px 8px;
}

.toolBarGroup {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.toolBarGroupStart {
    justify-content: flex-start;
}

.toolBarGroupEnd {
    justify-content: flex-end;
}

.save-status {
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 500ms, visibility 500ms linear;
    transition: opacity 500ms, visibility 500ms linear;
    margin-right: 4px;
}

.close-modal:hover,
.close-modal:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

input:disabled,
textarea:disabled,
button:disabled,
select:disabled {
    border: 0;
    box-shadow: none;
    color: #888;
    background-color: #ccc;
    pointer-events: none;
}

.formElement {
    display: grid;
    grid-template-columns: 25% 75%;
    margin-top: 8px;
    width: 100%;
    text-align: end;
}

.formElement--column {
    display: grid;
    grid-template-columns: 100%;
    margin-top: 8px;
    width: 100%;
    align-items: center;
    text-align: center;
}

.formElement select,
.formElement button:not(.video-control),
.formElement input:not([type='checkbox']):not([type='range']):not([type='radio']):not(.video-control) {
    flex-grow: 1;
    border-radius: 5px;
    height: 24px;
}
.formElement label {
    height: 24px;
    flex-basis: 20%;
    padding-top: 4px;
    margin-right: 8px;
}
.formElement--column label {
    height: 24px;
    flex-basis: 100%;
    padding-top: 4px;
    margin-right: 0px;
}

.formElement .radio-group {
    text-align: start;
}

.styled-radio {
    width: 20px;
    height: 20px;
    margin: 4px 0px;
}
/* width: max-content Hack to get to align left. Somthings not right but im not looking for it now.  */
.formElement input[type='checkbox'] {
    width: max-content;
    /* margin-right: 8px; */
}
.formElement--column input[type='checkbox'] {
    width: max-content;
    margin: auto;
}
.form-buttons {  
    margin-top: 8px;
}
.form-buttons button {
    margin-right: 8px;
}
/* Doesnt look right in Deo */
.styled-checkbox {
    width: 20px;
    height: 20px;
    margin: 4px 0px;
    background-color: white;
    border: 1px solid white;
    border-radius: 4px;
    appearance: none;
    -webkit-appearance: none;
    cursor: pointer;
}

.styled-checkbox:checked:after {
    content: "\1F5F8";
}

.styled-checkbox:checked {
    font-size: 16px;
    font-weight: bold;
    text-align: center;
}
.styled-text {

}
button:not(.icon-button):not(.tab-section-tab):not(.video-control):not(.media-context) {
    border-radius: 5px;
    height: 24px;
}

select {
    min-width: 132px;
}

select:hover,
button:hover:not(.video-control):not(.media-context),
input:hover:not(.range-input) {
    background-color: lightblue;
}

.icon-button {
    /* height: 32px; */
    /* margin: 0; */
    /* width: 32px; */
    /* border-radius: 50%; */
    padding: 8px;
    border-width: 1px;
    border-radius: 9999px;
    display: inline-flex;
    /* justify-content: center; */
    /* align-content: center; */
    border-style: solid;
    position: relative;
    background-color: rgba(255, 255, 255, 0.8);
    transition: background-color 0.25s 0s cubic-bezier(0, 1, 1, 1);
    cursor: pointer;
}
.icon-button-down {
    background-color: rgba(128, 140, 255, 0.596) !important;
    color: white;
}
.icon-button>img {
    width: 16px;
    height: 16px;
}

.icon-small {
    width: 16px;
    height: 16px;
}

.header-button {
    margin-left: 4px;
}

.header-button-right {
    margin-right: 4px;
}

.thumbs-container {
    display: flex;
    flex-flow: column;
    font-family: arial;
    font-size: 16px;
    /* max-height: calc(100vh - 165px);
    overflow-y: auto; */
}

.thumbs-body {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    justify-content: center;
}

.media-item {
    position:relative;
    overflow: visible;
    border-radius: 25px;
    margin: 5px;
    content-visibility: auto;
    contain-intrinsic-size: 1px 500px;

}

.media-filter-input {
    width: 25vw;
    border-radius: 5px;
    height: 24px;
    left: calc(100vw - 35vw);
    position: absolute;
    z-index: 10;
}

.media-item:hover {
    cursor: pointer;
}

.media-item.media-item-playing:hover {
    cursor: not-allowed;
}

.media-thumb-nail {
    object-fit: contain;
}

.media-context {
    position: absolute;
    background: transparent;
    border: none;
    border-radius: 20px;
}
.media-context-heresphere {
    position: relative;
}
.media-context:hover {
    background-color: rgb(107 111 143 / 36%);
    border: none;
}
/* ... */

